hass/deployment.yaml
# plex/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hass
  namespace: hass
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hass
  template:
    spec:
      nodeSelector:
        node-type: primary
      containers:
        - name: hass
          image: ghcr.io/home-assistant/home-assistant:stable
          resources:
          volumeMounts:
            - name: config
              mountPath: /config
            - name: usb0
              mountPath: /dev/ttyS0
            - name: usb1
              mountPath: /dev/ttyS1              
          securityContext:
            privileged: true
            capabilities:
              drop: ["ALL"]              
      volumes:
        - name: config
          nfs:
            server: 192.168.50.43
            path: /mnt/k3s_share/hass/config
        - name: usb0
          hostPath:
            path: /dev/ttyS0
        - name: usb1
          hostPath:
            path: /dev/ttyS1
