hass/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass
  namespace: hass
spec:
  rules:
    - host: hass.h
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hass
                port:
                  number: 8123
